--- a/css/main.css
+++ b/css/main.css
@@ -38,3 +38,34 @@ video {
   block-size: auto;
   vertical-align: middle;
 }
+
+/*Bootstrap*/
+.row + .row {
+  margin-top: 16px;
+}
+
+.row > .col,
+.row > [class^="col-"] {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: rgba(86, 61, 124, 0.15);
+  border: 1px solid rgba(86, 61, 124, 0.2);
+}
+
+.layout {
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  border-bottom: 2px solid black;
+}
+
+.header {
+  background: #2b2d42;
+}
+
+.footer {
+  background: #92dce5;
+}
+
+.main {
+  background: #f0e0ff;
+}
