suite codage css

--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,7 @@ nav {
   width: 290px;
   height: 101px;
   font-size: 16px;
+  font-family: Judson;
   text-transform: uppercase;
   padding: 6px;
 }
@@ -124,6 +125,7 @@ nav {
     align-items: center;
     justify-content: space-around;
     font-size: 32px;
+    margin-bottom: 90px;
   }
 }
 
@@ -201,6 +203,7 @@ p {
   width: 87px;
   height: 37.901px;
   text-decoration-line: underline;
+  margin: 30px 0 30px;
 }
 
 .button_reservations {
