--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@
 html {
   font-size: 16px;
   font-family: Inika;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -93,7 +94,7 @@ h2 {
   h2 {
     color: var(--dor-light, #FAE0A7);
     font-family: Judson;
-    font-size: 86px;
+    font-size: 85px;
     font-weight: 400;
   }
 }
@@ -127,6 +128,18 @@ nav {
     font-size: 32px;
     margin-bottom: 90px;
   }
+}
+
+@media (min-width: 768px) {
+  .a-propos-de-nous-dress-code {
+  margin: 109px 0 195px;
+}
+}
+
+@media (min-width: 768px) {
+  .container-la-carte {
+  margin: 103px 0 195px;
+}
 }
 
 main {
@@ -175,9 +188,7 @@ p {
   color: var(--dor-light, #FAE0A7);
   font-family: Judson;
   font-size: 150px;
-  font-style: normal;
   font-weight: 400;
-  line-height: normal;
   filter: blur(2px);
   }
 }
@@ -187,9 +198,7 @@ p {
     color: var(--dor-light, #FAE0A7);
     font-family: Judson;
     font-size: 128px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
   }
 }
 
