--- a/css/main.css
+++ b/css/main.css
@@ -40,9 +40,35 @@ video {
   block-size: auto;
   vertical-align: middle;
   border-radius: 230px;
-  mix-blend-mode: luminosity;
   aspect-ratio: 1;
   object-fit: cover;
+}
+
+.la-carte-img,
+.img-initial {
+  mix-blend-mode: luminosity;
+}
+
+.img-section-la-carte{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.img-section-la-carte p {
+  position: absolute;
+  color: var(--dor-light, #FAE0A7);
+  font-family: Judson;
+  font-size: 64px;
+  opacity: 0;
+}
+
+.img-section-la-carte:hover p{
+  opacity: 100%;
+  color: var(--dor-light, #FAE0A7);
+  transition-duration: 0s;
+  transition-delay: 0s;
 }
 
 .img-section-la-carte,
@@ -111,6 +137,12 @@ nav {
   padding: 6px;
 }
 
+.category:hover {
+  opacity: 50%;
+  transition-duration: 0s;
+  transition-delay: 0s;
+}
+
 .nav-container, .container-button-reservation {
   display: flex;
   justify-content: center;
@@ -168,35 +200,71 @@ p {
   padding-bottom: 34px;
 }
 
+.container-carousel {
+  position: relative;
+  overflow: hidden;
+}
+
+.container-carousel-text {
+  display: flex;
+}
+
+.carousel-left {
+  animation: carousel-left 10s infinite linear;
+}
+
+.carousel-right {
+  animation: carousel-right 10s infinite linear;
+}
+
 .carousel-text-blur {
   color: var(--dor-light, #FAE0A7);
   font-family: Judson;
   font-size: 64px;
+  margin-right: 30px;
   font-weight: 400;
   filter: blur(2px);
+  flex-shrink: 0;
 }
 
 .carousel-text {
   color: var(--dor-light, #FAE0A7);
   font-family: Judson;
+  margin-right: 30px;
   font-size: 48px;
   font-weight: 400;
+  flex-shrink: 0;
+}
+
+@keyframes carousel-left {
+  0% {
+    transform: translateX(-500px);
+  }
+  100% {
+    transform: translateX(100px);
+  }
+}
+
+@keyframes carousel-right {
+  0% {
+    transform: translateX(100px);
+  }
+  100% {
+    transform: translateX(-500px);
+  }
 }
 
 @media (min-width: 768px) {
   .carousel-text-blur {
-  color: var(--dor-light, #FAE0A7);
-  font-family: Judson;
+  margin-right: 100px;
   font-size: 150px;
   font-weight: 400;
-  filter: blur(2px);
   }
 }
 
 @media (min-width: 768px) {
   .carousel-text {
-    color: var(--dor-light, #FAE0A7);
-    font-family: Judson;
+    margin-right: 100px;
     font-size: 128px;
     font-weight: 400;
   }
@@ -209,10 +277,24 @@ p {
   color: var(--dor-light, #FAE0A7);
   font-family: Judson;
   font-size: 20px;
-  width: 87px;
-  height: 37.901px;
+  padding: 9px 16px;
   text-decoration-line: underline;
   margin: 30px 0 30px;
+}
+
+@media (min-width: 768px) {
+  .button_more_info {
+    font-size: 34px;
+    padding: 23px 45px;
+  }
+}
+
+.button_more_info:hover {
+  color: var(--black);
+  border: var(--black);
+  background-color: var(--light);
+  transition-duration: 0s;
+  transition-delay: 0s;
 }
 
 .button_reservations {
@@ -228,15 +310,39 @@ p {
   text-decoration-line: underline;
 }
 
+.button_reservations:hover {
+  color: var(--black);
+  border: var(--black);
+  background-color: var(--light);
+  transition-duration: 0s;
+  transition-delay: 0s;
+}
+
 footer {
   background: var(--black);
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
 }
+
 
 .footer-content {
   border: 1px solid var(--dor-light, #FAE0A7);
   color: var(--dor-light, #FAE0A7);
   font-family: Judson;
-  font-size: 20px;
+  font-size: 32px;
   font-weight: 400;
-  padding: 20px 0 25px;
+  padding: 48px 25px;
+  width: 33.3333333%;
+}
+
+footer .width{
+  width: 50%;
+}
+
+.footer-content:hover {
+  opacity: 50%;
+  transition-duration: 0s;
+  transition-delay: 0s;
 }
