--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ video {
   font-family: Judson;
   font-size: 29px;
   opacity: 0;
+  transition-duration: 0.3s;
 }
 
 @media (min-width: 768px) {
@@ -73,15 +74,17 @@ video {
 .img-section-la-carte:hover p{
   opacity: 100%;
   color: var(--dor-light, #FAE0A7);
-  transition-duration: 0s;
   transition-delay: 0s;
 }
 
 .img-section-la-carte:hover {
-  opacity: 50%;
   color: var(--dor-light, #FAE0A7);
-  transition-duration: 0s;
+  transition-duration: 0.3s;
   transition-delay: 0s;
+}
+
+.img-section-la-carte:hover img{
+  opacity: 50%;
 }
 
 
@@ -153,7 +156,7 @@ nav {
 
 .category:hover {
   opacity: 50%;
-  transition-duration: 0s;
+  transition-duration: 0.3s;
   transition-delay: 0s;
 }
 
@@ -294,6 +297,7 @@ p {
   padding: 9px 16px;
   text-decoration-line: underline;
   margin: 30px 0 30px;
+  transition-duration: 0.3s;
 }
 
 @media (min-width: 768px) {
@@ -307,7 +311,7 @@ p {
   color: var(--black);
   border: var(--black);
   background-color: var(--light);
-  transition-duration: 0s;
+  transition-duration: 0.3s;
   transition-delay: 0s;
 }
 
@@ -328,7 +332,7 @@ p {
   color: var(--black);
   border: var(--black);
   background-color: var(--light);
-  transition-duration: 0s;
+  transition-duration: 0.3s;
   transition-delay: 0s;
 }
 
